[project]
name = "pendragondi-api-raw"
version = "1.0.0"
description = "PendragonDI API – lightweight tool to detect redundant API calls and inefficiencies"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "jinpendragon", email = "pendragondi@pendragondi.com" }
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/PendragonDI/pendragondi-api-raw"
Repository = "https://github.com/PendragonDI/pendragondi-api-raw"

[tool.setuptools.packages.find]
where = ["src"]
exclude = []
